--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
+    "dev": "nodemon",
+    "dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9222 -r ts-node/register src/main.ts",
     "start": "node ./dist/main.js",
     "lint": "eslint ./src/**",
     "lint:fix": "eslint ./src/** --fix"
@@ -14,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "inversify": "6.0.1",
     "reflect-metadata": "^0.1.13",
@@ -26,7 +29,9 @@
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
 }
